# Process this file with automake to produce Makefile.in (in this,
# and all subdirectories).
#
# Makefile for the top-level directory of GNU html2db.
# Copyright (C) 1997, 1998, 2005, 2006 Free Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

# Find gnulib headers.
ACLOCAL_AMFLAGS = -I m4

# Additional files to distribute.
EXTRA_DIST = 

# Subdirectories to descend into.
SUBDIRS = src doc man tests


